# DjangoAdminStock

./: .env.example  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
core/: settings.py  urls.py
inventory/: admin.py  models.py
movement_stock/: admin.py  apps.py  models.py  signals.py
product/: admin.py  models.py
product/migrations/: 0001_initial.py  0002_remove_product_quantity.py
supplier/: admin.py
supplier/migrations/: 0001_initial.py
supplier/models/: __init__.py  contact_person.py  supplier.py
