[tool.poetry]
name = "django-admin-stock"
version = "0.1.0"
description = "A Django project for stock administration."
authors = ["Rogerio Campos <rogerio.campos07@gmail.com>"]
readme = "README.md"
packages = [{include = "django_admin_stock", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
django = ">=5.2.6,<6.0.0"
gunicorn = ">=23.0.0,<24.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"

[tool.ruff]
exclude = ['settings.py','manage.py']
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
pre_test = 'task lint'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

